relay/deploy/base/event-persister-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-persister
spec:
  selector:
    matchLabels:
      app: event-persister
  template:
    metadata:
      labels:
        app: event-persister
    spec:
      containers:
        - name: event-persister
          image: event-persister
          ports:
            - containerPort: 2700
          # livenessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 2700
          #   failureThreshold: 1
          #   periodSeconds: 5
          # startupProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 2700
          #   failureThreshold: 6
          #   periodSeconds: 5
