relay/deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: relay
  template:
    metadata:
      labels:
        app: relay
    spec:
      containers:
        - name: relay
          image: badimage:badtag # This is a placeholder. The image is built and pushed by the CI/CD pipeline.
          ports:
            - containerPort: 2700
          livenessProbe:
            httpGet:
              path: /healthz
              port: 2700
            failureThreshold: 1
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /healthz
              port: 2700
            failureThreshold: 6
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: relay-service
selector:
  app: relay
spec:
  selector:
    app: relay
  ports:
    - protocol: TCP
      port: 2700
      name: web
  type: ClusterIP
