relay/deploy/base/mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
        startupProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 15
          periodSeconds: 5
          failureThreshold: 5
          timeoutSeconds: 1
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: 
      - "ReadWriteOnce"
      storageClassName: "do-block-storage"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
  - port: 3306
    name: db
