relay/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: relay-service
selector:
  app: relay
spec:
  selector:
    app: relay
  ports:
    - protocol: TCP
      port: 2700
      name: web
  type: LoadBalancer
